--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.9",
     "matter-js": "^0.19.0",
+    "qrcode-vue": "^1.2.0",
     "quill-emoji": "^0.2.0",
     "sass-loader": "^12.6.0",
     "style-resources-loader": "^1.4.1",
