--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "ace-builds": "^1.15.2",
+    "bwip-js": "^4.2.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.9",
     "matter-js": "^0.19.0",
